[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Ship 2.png" type="Texture" id=1]
[ext_resource path="res://Player/SoundEffects/bullet.ogg" type="AudioStream" id=2]
[ext_resource path="res://Player/SoundEffects/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://Player/SoundEffects/no ammo.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/Player.gd" type="Script" id=8]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 0.2
flag_disable_z = true
gravity = Vector3( 0, 100, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 47.62
radial_accel_random = 0.06
angle = 439.0
angle_random = 1.0
scale = 3.0
scale_random = 1.0
color = Color( 1, 0.329412, 0, 1 )
hue_variation = 0.14
hue_variation_random = 1.0

[node name="Player" type="Area2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 8 )

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.15

[node name="Particles" type="Particles2D" parent="."]
position = Vector2( 0, 5.51688 )
rotation = 1.5708
amount = 200
lifetime = 2.0
fract_delta = false
local_coords = false
draw_order = 1
process_material = SubResource( 1 )

[node name="Particles2" type="Particles2D" parent="."]
visible = false
position = Vector2( 5.55573, 6.47527 )
amount = 100
local_coords = false
process_material = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Collider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -1, -2, -4, 2, -6, 2, -6, 6, -4, 6, -4, 4, 4, 4, 4, 6, 6, 6, 6, 2, 4, 2, 1, -2, 0, -6 )

[node name="LeftCannon" type="Node2D" parent="."]
position = Vector2( -5.26088, -1.74532 )

[node name="RightCannon" type="Node2D" parent="."]
position = Vector2( 5.21412, -1.74532 )
scale = Vector2( 4, 4 )

[node name="Audio" type="Node2D" parent="."]

[node name="Laser" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 2 )
volume_db = 5.0

[node name="Hit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 3 )
volume_db = -3.355

[node name="NoAmmo" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="ShotCooldown" to="." method="_on_ShotCooldown_timeout"]
